Se implementaron controladores y DTOs para la gestión de envíos, incluyendo soporte HATEOAS. Se añadieron métodos para crear, obtener, actualizar y eliminar envíos, así como refactorización de metodos para calcular costos y actualizar estados. También se documentaron las operaciones con Swagger.